[package]
name = "acme-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# http = "1.1"
# http-body-util = "0.1"
# hyper = { version = "1.3", features = ["client", "http1", "http2"] }
# hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "native-tokio", "tls12"] }
# hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
ring = { version = "0.17", features = ["std"] }
wallee = "0.2"
# rustls-pemfile = "2.1"
base64 = "0.22"
rustls-pki-types = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bytes = "1.10"
tokio = { version = "1.47", features = ["full"] }

[dev-dependencies]
rcgen = "0.14"